# ai-factory-workflow

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
data/: sample_requests.cob  sample_requests.csv  sample_requests.json  sample_requests.txt
docs/: challenge_tecnico.md  design.md
ejemplos/backoffice_sample_run/: README.md  data_quality_report.json  decision_log.jsonl  normalized_requests.csv  rejected_requests.csv  run_manifest.json
ejemplos/backoffice_sample_run/2026-02-11_215216Z__backoffice_sample__9c6013e0/: data_quality_report.json  decision_log.jsonl  run_manifest.json
src/workflow/: audit.py  engine.py  io.py  models.py  normalize.py  quality.py  rules.py  run.py
tests/: test_io_formats.py  test_normalize.py  test_rules.py  test_run_e2e.py
